# tab2seq

./: .gitignore  .zenodo.json  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: synthetic_source.ipynb
src/tab2seq/: __init__.py
src/tab2seq/datasets/: __init__.py  synthetic.py
src/tab2seq/source/: __init__.py  collection.py  config.py  core.py
tests/: test_datasets.py  test_source.py
